# async-workflow-engine

./: .env.example  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.commandcode/plans/: awfe-full-build.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: EXECUTION_PLAN.md  architecture.md  design-decisions.md  failure-modes.md  implementation_plan.md  roadmap.md  security.md
examples/: run_demo.py  sample_workflow.yaml
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DagGraph.tsx  DeadLetterTable.tsx  DemoModeBanner.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  LoadingSkeleton.tsx  NavBar.tsx  RunList.tsx  RunStatusChart.tsx  ScheduleList.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  demoMode.ts  mockData.ts  status.ts
frontend/src/types/: index.ts
frontend/tests/: setup.ts
frontend/tests/components/: DagGraph.test.tsx  DeadLetterTable.test.tsx  EmptyState.test.tsx  ErrorBoundary.test.tsx  (+4 more)
src/workflow_engine/: __init__.py  config.py  dag.py  db.py  executor.py  main.py  models.py  parser.py  runner.py  scheduler.py  storage.py  storage_db.py  tasks.py  webhooks.py  worker.py
tests/: conftest.py  test_api.py  test_core.py  test_dag.py  test_db.py  test_executor.py  test_models.py  test_parser.py  test_runner.py  test_scheduler.py  test_storage.py  test_storage_db.py  test_tasks.py  test_webhooks.py  test_worker.py
(+6 files in other folders)
